$Id$

2015-04-28  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Fix possible loss of user PATH environment
	variable with length greater than NSIS max string length.

2015-04-26  Christian Franke  <franke@computer.org>

	do_release: New Signing Key.
	Makefile.am: Use make variables instead of autoconf variables
	if possible.

2015-04-24  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in: Rework AUTHORS section.
	INSTALL, Makefile.am, os_win32/installer.nsi:
	Remove WARNINGS file.
	WARNINGS: Remove this file.

2015-04-23  Christian Franke  <franke@computer.org>

	configure.ac: Add '--with-systemdenvfile=auto' option as new default.
	Remove no longer needed ENABLE_CAPABILITIES conditional.
	Makefile.am: Silence build of smartd.service file.
	Integrate all ENABLE_* conditionals in MAN_FILTER script.

2015-04-21  Christian Franke  <franke@computer.org>

	configure.ac: Print 'deprecated' warning for '--disable-drivedb',
	'--enable-savestates', '--enable-attributelog' options.
	Add 'yes|no' support to corresponding '--with-...' options.

2015-04-19  Christian Franke  <franke@computer.org>

	AUTHORS: Remove smartmontools-support list address.
	Remove defunct mail addresses.  Update smartsuite info.
	Add recent contributors.
	README: Refer to AUTHORS.

2015-04-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add SAT autodetection based on vendor string from
	IOCTL_STORAGE_QUERY_PROPERTY.
	smartd.cpp: If SMART ENABLE command failed, continue if SMART is
	already enabled.

2015-04-17  Christian Franke  <franke@computer.org>

	os_win32.cpp: Detect SAT layer of certain Intel AHCI drivers.

2015-04-15  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, update-smart-drivedb.8.in:
	Add REPORTING BUGS section.
	smartctl.8.in, smartd.8.in:
	Rename RETURN VALUE section to EXIT STATUS.
	smartd.8.in: Remove no longer used exit status 9.

2015-04-14  Christian Franke  <franke@computer.org>
